# CPlusPlus-Repository

./: .gitignore  CMakeLists.txt  CharAufgabe290518.c  MatrixUebungsloesung.c  Notizen.txt  PointerAufgabe290518.c  PointerOfPointer.c  README.md  SingleLinkedListAufgabe050618.c  SingleLinkedListLoesung.c  Testing.c
C/: CallByValueReference.c  Interfaces.c  PointerTest2.c  SingleLinkedListLoesung.c  Taschenrechner.c  Test.c  Test.h  charVerstehen.c  stack.c  stack.h  structVerstehen.c
CPlusPlus/: Abdurrahman.cpp  Abdurrahman.h  DoubleLinkedList.cpp  LinkedList.cpp  LinkedList.h  List.h  ListElement.h  Main.cpp  Pointer.cpp  Pointer.h  Pointer2.cpp  Pointer2.h  Sefa.cpp  Sefa.h  SefaAbdurrahmanMain.cpp  SingleLinkedList.cpp  Uebung.cpp  Uebung.h
CPlusPlus/FriendExample/: Display.cpp  Display.h  Storage.cpp  Storage.h  main.cpp
CPlusPlus/Inheritance/: Child.cpp  Child.h  Parent.cpp  Parent.h  main.cpp
CPlusPlus/ListInheritance/: Collection.h  DoubleLinkedList.cpp  DoubleLinkedList.h  LinkedList.cpp  LinkedList.h  List.cpp  ListElement.h  Main.cpp  SingleLinkedList.cpp
CPlusPlus/ListInheritanceBeispielLoesung/: Collection.cpp  Collection.h  DoubleLinkedList.cpp  DoubleLinkedList.h  LinkedList.cpp  LinkedList.h  List.cpp  List.h  ListElement.h  Main.cpp  SingleLinkedList.cpp  SingleLinkedList.h  cmakelist
