cmake_minimum_required(VERSION 3.10)
project(cplusplus)

set(CMAKE_CXX_STANDARD 17)

add_executable(cplusplus CPlusPlus/Collection.h CPlusPlus/Collection.cpp CPlusPlus/List.h CPlusPlus/List.cpp CPlusPlus/LinkedList.cpp CPlusPlus/LinkedList.h CPlusPlus/Main.cpp CPlusPlus/SingleLinkedList.cpp CPlusPlus/SingleLinkedList.h CPlusPlus/SingleLinkedList.cpp CPlusPlus/DoubleLinkedList.h CPlusPlus/DoubleLinkedList.cpp CPlusPlus/ListElement.h)